# DATA-ENGINEERING

./: README.md
DOCKER/: README.md  ssh.md
DOCKER/AIRFLOW/: Dockerfile  README.md  airflow-pod.yml  airflow.cfg  install.sh
DOCKER/EVOLUTION/: .env  README.md  docker-compose.yaml
DOCKER/HADOOP/: README.md  core-site.xml  datanode.xml  hadoop-env.sh  install.sh  namenode.xml
DOCKER/HIVE/: README.md  install.sh
DOCKER/JUPYTER/: Dockerfile  README.md
DOCKER/KAFKA/: README.md
DOCKER/LDAP/: README.md
DOCKER/MCP/: README.md  client.py  dockerfile  entrypoint.sh  pyproject.toml  server.py
DOCKER/METABASE/: Dockerfile  install.sh
DOCKER/MYSQL/: README.md
DOCKER/N8N/POSTS/APP/: .gitignore  README.md  caption.txt  hashtags.txt  post.txt  prompt_image.txt  pyproject.toml  requeriments.txt  result.json
DOCKER/N8N/POSTS/APP/src/: architecture.md  architecture.txt
DOCKER/N8N/POSTS/APP/src/app/: caption.txt  crew.py  hashtags.txt  main.py  post.txt  prompt_image.txt  result.json
DOCKER/N8N/POSTS/APP/src/app/config/: agents.yaml  drive.py  tasks.yaml
DOCKER/N8N/POSTS/APP/src/app/model/: agents.py
DOCKER/N8N/POSTS/APP/src/app/static/: robots.txt
DOCKER/N8N/POSTS/APP/src/app/static/document/: caption.json  hashtags.json  post.json  prompt_image.json  result.json
DOCKER/N8N/POSTS/APP/src/app/tools/: cloudflareapi.py  custom_tool.py  googleapi.py  instagramapi.py  mergeimages.py  promptimage.py
DOCKER/N8N/POSTS/APP/src/app/utils/: inputs.py  mergeimage.py  upload.py
KUBERNETES/: README.md  docker.sh  install.sh  kubernetes.sh  kubernetes_configure.sh
(+28 files in other folders)
